# tg-bot-giveaway-and-broadcast

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_CLEANUP_SUMMARY.md  PUBLISH_GUIDE.md  QUICK_START.md  README.md  READY_TO_PUBLISH.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.qoder/quests/: telegram-giveaway-bot.md
bot/: __init__.py  main.py
bot/config/: config.json.example  settings.py
bot/db/: base.py  models.py
bot/db/repo/: draft_repo.py  giveaway_repo.py  participant_repo.py  user_repo.py  winner_repo.py
bot/handlers/: __init__.py  start.py
bot/handlers/admin/: announce.py  broadcast_wizard.py  date_picker.py  entry.py  giveaway_wizard.py  menu.py  states.py  winners.py
bot/keyboards/: __init__.py  admin.py  common.py
bot/messages/: __init__.py  i18n.py  messages.json
bot/services/: giveaway_service.py  mailing.py  sheets_sync.py  subscription.py
